Bug 444613 - KisAnimTimelineFramesView invalid memory access on closing Krita
Summary: KisAnimTimelineFramesView invalid memory access on closing Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2021-10-29 16:07 UTC by Alvin Wong
Modified: 2021-11-03 22:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (3.99 KB, text/plain)
2021-10-29 16:07 UTC, Alvin Wong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2021-10-29 16:07:39 UTC
Created attachment 143006 [details]
backtrace

Caught this with Application Verifier (had to also use a bit of hack to bypass another problem).

Steps performed:

1. Open file A
2. Open file B
3. Switch to file A
4. Make a change
5. Close Krita and choose "no" when asked to save changes

Without Application Verifier it causes an apparently random unrelated crash.

Nightly 4ff1b5a2b1, also happens on 5.0 branch
Comment 1 Eoin O'Neill 2021-11-02 01:56:56 UTC
I'll take a look at this tomorrow.
Comment 2 Eoin O'Neill 2021-11-02 21:53:14 UTC
Git commit 5214230c5a9a4047b875292a85439074c8e20cc3 by Eoin O'Neill.
Committed on 02/11/2021 at 21:52.
Pushed by eoinoneill into branch 'master'.

Fixed crash on document close caused by invalid lambda lifetime for signal.

There still seem to be other places where Krita is crashing on close, but
at least this lifetime issue has been fixed.

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesView.cpp

https://invent.kde.org/graphics/krita/commit/5214230c5a9a4047b875292a85439074c8e20cc3
Comment 3 Eoin O'Neill 2021-11-03 22:19:20 UTC
Git commit 82bc4dbbc52c14fab614b727b468c56618288103 by Eoin O'Neill.
Committed on 03/11/2021 at 22:02.
Pushed by eoinoneill into branch 'krita/5.0'.

Fixed crash on document close caused by invalid lambda lifetime for signal.

There still seem to be other places where Krita is crashing on close, but
at least this lifetime issue has been fixed.
(cherry picked from commit 5214230c5a9a4047b875292a85439074c8e20cc3)

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesView.cpp

https://invent.kde.org/graphics/krita/commit/82bc4dbbc52c14fab614b727b468c56618288103