Fixed crash on document close caused by invalid lambda lifetime for signal.

There still seem to be other places where Krita is crashing on close, but
at least this lifetime issue has been fixed.

BUG:444613
(cherry picked from commit 5214230c5a9a4047b875292a85439074c8e20cc3)